# life_or_send

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONFIG.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  LICENSE  README.md  README_EN.md  README_KR.md  README_ZH.md  docker-compose.yml  main.py  mkdocs.yml  project_structure  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: ci.yml
alembic/versions/: xxx_add_session_id_to_messages.py
api/: admin.py  analytics.py  base.py  chat.py  health.py  search.py  session.py  wechat.py
config/: config.py
database/: db.py
docs/: api.md  development.md
docs/api/: overview.md
docs/development/: coding-standards.md  deployment.md  testing.md
middleware/: error_handler.py  metrics.py  rate_limiter.py
migrations/: env.py
migrations/versions/: 001_initial.py
models/: chat_session.py  message.py  user.py
scripts/: check_config.py  init_db.py  test_db.py  test_wechat.py
services/: ai_service.py  analytics_service.py  cache_service.py  chat_service.py  export_service.py  monitor_service.py  prompt_template.py  queue_service.py  retry_service.py  scheduler_service.py  search_service.py  session_service.py  vector_service.py  wechat_service.py
tasks/: scheduled_tasks.py
tests/: conftest.py  test_monitor.py  test_search.py  test_session.py  test_wechat.py
utils/: decorators.py  logger.py
