[metadata]
name = life_or_send
version = 1.0.0
description = AI-powered customer service system with WeChat integration
long_description = file: README.md
long_description_content_type = text/markdown
author = Yansong
author_email = your.email@example.com
url = https://github.com/yansongWang/life_or_send
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
python_requires = >=3.8
install_requires =
    fastapi>=0.104.1
    uvicorn>=0.24.0
    sqlalchemy>=2.0.23
    aioredis>=2.0.1
    httpx>=0.25.1

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = .git,__pycache__,build,dist,*.egg-info

[isort]
profile = black
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[mypy]
python_version = 3.8
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = -v --cov=life_or_send --cov-report=html 